--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     <!-- CSS -->
-    <link rel="stylesheet" href="../proyecto-final/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
     <!-- voy a usar dos tipos de font -->
 
     <!-- Kalam Bold 700 y 300 -->
