--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <!-- Encabezado con logo de empresa mas menu navegable -->
     <div>
-        <img src="proyecto-final/images/bannermimix.png" alt="Banner Logo Mimix" class="banners">
+        <img src="images/bannermimix.png" alt="Banner Logo Mimix" class="banners">
     </div>
 
 
@@ -65,16 +65,16 @@
             <nav class="navbar navbar-inverse">
               <div class="container-fluid">
                 <ul class="nav navbar-nav lista">
-                  <li><a class="hoverable boton" href="proyecto-final/index.html">Inicio</a></li>
-                  <li><a class="hoverable boton" href="proyecto-final/htmls/Mimix.html">Mimix</a></li>
-                  <li><a class="hoverable boton" href="proyecto-final/htmls/contacto.html">Contacto</a></li>
+                  <li><a class="hoverable boton" href="index.html">Inicio</a></li>
+                  <li><a class="hoverable boton" href="htmls/Mimix.html">Mimix</a></li>
+                  <li><a class="hoverable boton" href="htmls/contacto.html">Contacto</a></li>
                   <li><a href="" class=" hoverable menu boton">Menu</a>
                     <ul class="sublista">
-                        <li> <a href="proyecto-final/htmls/menucumpleto.html" class=" menu boton">Menu Completo</a></li>
-                        <li> <a href="proyecto-final/htmls/promos.html" class=" menu boton">Promos</a></li>
+                        <li> <a href="htmls/menucumpleto.html" class=" menu boton">Menu Completo</a></li>
+                        <li> <a href="htmls/promos.html" class=" menu boton">Promos</a></li>
                     </ul>
                   </li>
-                  <li><a class="hoverable boton" href="proyecto-final/htmls/trabaja.html">Trabaja con Nosotros</a></li>
+                  <li><a class="hoverable boton" href="htmls/trabaja.html">Trabaja con Nosotros</a></li>
                 </ul>
               </div>
             </nav>
@@ -82,7 +82,7 @@
     </header>
 
     <div>
-        <img src="proyecto-final/images/sepbasic.png" alt="Separador Inicial" class="banners">
+        <img src="images/sepbasic.png" alt="Separador Inicial" class="banners">
    </div>
         <!-- titulo escondido -->
                 <h1 class="titulomaster">MIMIX Burguer</h1>
