--- a/htmls/Mimix.html
+++ b/htmls/Mimix.html
@@ -62,10 +62,12 @@
 
     <section class="container">
         <h2 class="titulo">¿¿Que es Mimix??</h2>
-        <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisi
-            cing elit. Necessitatibus ratione nemo 
-            maiores voluptatem, deleniti doloremque iusto. Non, ratione voluptas unde aspernatur tempore et soluta, quas quia commodi 
-            laboriosam beatae. Et.</p>
+        <p class="parrafo">Mimix , nace de la necesidad de crear una hamburguesa con estilo Yankee en Uruguay.
+            Mimix es la fusion de las dos culturas, talvez porque su creador vivio en los dos lados y pudo absorver
+            lo mejor de las dos culturas o talvez simplemente porque entendio que en Uruguay hacia falta una hamburguesa 
+            que te lleve a los origenes de la misma.
+            Mimix es eso, dos mundos en uno. Todo lo bueno de la hamburguesa Yankee con todo lo bueno de la carne Uruguaya.
+        </p>
     </section>
     
     <section>
