--- a/htmls/contacto.html
+++ b/htmls/contacto.html
@@ -65,7 +65,7 @@ font-family: 'Kalam', cursive; -->
 	<div class="contact1">
 		<div class="container-contact1">
 			<div class="contact1-pic js-tilt" data-tilt>
-				<img src="../images/MIMIX-Tamaño original.png" alt="IMG">
+				<img src="../images/MIMIX-original.png" alt="IMG">
 			</div>
 
 			<form class="contact1-form validate-form">
