enviar php agregado

--- a/htmls/contacto.html
+++ b/htmls/contacto.html
@@ -68,7 +68,7 @@ font-family: 'Kalam', cursive; -->
 				<img src="../images/MIMIX-original.png" alt="IMG">
 			</div>
 
-			<form class="contact1-form validate-form">
+			<form action="enviar.php" method="POST" name="formulariocontacto" class="contact1-form validate-form">
 				<span class="contact1-form-title">
 					Contactanos
 				</span>
