cambios para mejorar

--- a/htmls/Mimix.html
+++ b/htmls/Mimix.html
@@ -94,7 +94,7 @@
                     <li class="carousel__slide">
                         <figure>
                             <div>
-                                <img src="../images/mimicds.jpg" alt="">
+                                <img src="../images/mimicds.jpg" alt="Emilia en el CDS">
                             </div>
                             <figcaption>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -105,7 +105,7 @@
                     <li class="carousel__slide">
                         <figure>
                             <div>
-                                <img src="../images/mimidespeinada.jpg" alt="">
+                                <img src="../images/mimidespeinada.jpg" alt="Emilia con Damian despeinada">
                             </div>
                             <figcaption>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -116,7 +116,7 @@
                     <li class="carousel__slide">
                         <figure>
                             <div>
-                                <img src="../images/mimibeach.jpg" alt="">
+                                <img src="../images/mimibeach.jpg" alt="Emilia en la playa">
                             </div>
                             <figcaption>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -127,7 +127,7 @@
                     <li class="carousel__slide">
                         <figure>
                             <div>
-                                <img src="../images/mimi1.jpg" alt="">
+                                <img src="../images/mimi1.jpg" alt="Emilia bebe">
                             </div>
                             <figcaption>
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
@@ -139,19 +139,19 @@
                 </ul>    
                 <ul class="carousel__thumbnails">
                     <li>
-                        <label for="slide-1"><img src="../images/mimiuru.jpg" alt=""></label>
+                        <label for="slide-1"><img src="../images/mimiuru.jpg" alt="Emilia bandera Uruguay"></label>
                     </li>
                     <li>
-                        <label for="slide-2"><img src="../images/mimicds.jpg" alt=""></label>
+                        <label for="slide-2"><img src="../images/mimicds.jpg" alt="Emilia estadio Campeon del Siglo"></label>
                     </li>
                     <li>
-                        <label for="slide-3"><img src="../images/mimidespeinada.jpg" alt=""></label>
+                        <label for="slide-3"><img src="../images/mimidespeinada.jpg" alt="Emilia Despeinada"></label>
                     </li>
                     <li>
-                        <label for="slide-4"><img src="../images/mimibeach.jpg" alt=""></label>
+                        <label for="slide-4"><img src="../images/mimibeach.jpg" alt="Emilia en la playa"></label>
                     </li>
                     <li>
-                        <label for="slide-5"><img src="../images/mimi1.jpg" alt=""></label>
+                        <label for="slide-5"><img src="../images/mimi1.jpg" alt="Emilia bebe"></label>
                     </li>
                     
                 </ul>
