--- a/htmls/menucumpleto.html
+++ b/htmls/menucumpleto.html
@@ -69,7 +69,7 @@
             La primera cadena de hamburgueserías del mundo se.
             </p>
 
-            <img src="../images/firma.png" alt="" class="firma">            
+            <img src="../images/firma.png" alt="Separador con Firma del Cheff" class="firma">            
  </section>
 
  <div>
@@ -79,7 +79,7 @@
  <section class="sectionmc">
       
 <div class="gridmc"> 
-     <img src="../images/menucompleto/comun1carne.jpeg" alt=""class="imgmenuc picmc">
+     <img src="../images/menucompleto/comun1carne.jpeg" alt="Hamburguesa artesanal comun de una sola carne"class="imgmenuc picmc">
     <p class="pmc">Hamburguesa artesanal comun de una sola carne.
         Ingredientes: Una carne, cebolla, lechuga, tomate, queso muzzarella y salsa especial Mimix.
     </p>
@@ -87,14 +87,14 @@
 </div>
 
 <div class="gridmc">
-    <img src="../images/menucompleto/comun2carne.jpeg" alt="" class="imgmenuc picmc">
+    <img src="../images/menucompleto/comun2carne.jpeg" alt="Hamburguesa artesanal comun con doble carne." class="imgmenuc picmc">
     <p class="pmc">Hamburguesa artesanal comun con doble carne.
         Ingredientes: doble carne, cebolla, lechuga, tomate, queso muzzarella y salsa especial Mimix.
     </p>
    <a href="" class="boton">$280</a>
 </div>
 <div class="gridmc">
-    <img src="../images/menucompleto/acaballo.jpeg" alt="" class="imgmenuc picmc">
+    <img src="../images/menucompleto/acaballo.jpeg" alt="Hamburguesa artesanal a caballo." class="imgmenuc picmc">
    <p class="pmc">Hamburguesa artesanal a caballo.
        Ingredientes: Una carne, cebolla, lechuga, tomate, huevo y salsa especial Mimix.
    </p>
@@ -102,7 +102,7 @@
 </div>
 
 <div class="gridmc">
-    <img src="../images/menucompleto/pollo.jpg" alt="" class="imgmenuc picmc">
+    <img src="../images/menucompleto/pollo.jpg" alt="Hamburguesa artesanal comun de pollo crujiente." class="imgmenuc picmc">
    <p class="pmc">Hamburguesa artesanal comun de pollo crujiente.
        Ingredientes Pollo crujiente, lechuga, tomate, cebolla, salsa golf y panceta caramelizada.
    </p>
@@ -110,7 +110,7 @@
 </div>
 
 <div class="gridmc">
-    <img src="../images/menucompleto/laputamadre.jpg" alt="" class="imgmenuc picmc">
+    <img src="../images/menucompleto/laputamadre.jpg" alt="Hamburguesa Picante" class="imgmenuc picmc">
    <p class="pmc">Hamburguesa "The puta madre".
        Ingredientes: Una carne, pan negro, Salsa picante (no apta para debiles), tomate, panceta, queso muzzarella y salsa especial Mimix.
    </p>
@@ -118,7 +118,7 @@
 </div>
 
 <div class="gridmc">
-    <img src="../images/menucompleto/superchedar.jpeg" alt="" class="imgmenuc picmc">
+    <img src="../images/menucompleto/superchedar.jpeg" alt="Hamburguesa artesanal super chedar." class="imgmenuc picmc">
    <p class="pmc">Hamburguesa artesanal super chedar.
        Ingredientes: Doble carne, cebolla, tomate, triple queso chedar, panceta caramelizada y salsa especial Mimix.
    </p>
@@ -138,14 +138,14 @@
  <section class="sectionmc">
       
 <div class="gridmc"> 
-     <img src="../images/menucompleto/porcionpapachica.jpeg" alt=""class="imgmenuc picmc">
+     <img src="../images/menucompleto/porcionpapachica.jpeg" alt="papas fritas chicas."class="imgmenuc picmc">
     <p class="pmc"> Porcion de papas fritas chicas.
     </p>
     <a href="" class="boton">$100</a>
 </div>
 
 <div class="gridmc">
-    <img src="../images/menucompleto/porcionpapagrande.jpeg" alt="" class="imgmenuc picmc">
+    <img src="../images/menucompleto/porcionpapagrande.jpeg" alt="papas fritas chicas." class="imgmenuc picmc">
     <p class="pmc">Porcion de papas fritas grandes.
     </p>
    <a href="" class="boton">$150</a>
