Cambios agregado copyright y cambiados lorems

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     
     <header >
         <div class="container-fluid">
-            <nav class="navbar navbar-inverse">
+            <nav class="navbar navbar-inverse nav">
               <div class="container-fluid">
                 <ul class="nav navbar-nav lista">
                   <li><a class="hoverable boton" href="index.html">Inicio</a></li>
@@ -74,7 +74,6 @@
                         <li> <a href="htmls/promos.html" class=" menu boton">Promos</a></li>
                     </ul>
                   </li>
-                  <li><a class="hoverable boton" href="htmls/trabaja.html">Trabaja con Nosotros</a></li>
                 </ul>
               </div>
             </nav>
