foto para open graph

--- a/htmls/Mimix.html
+++ b/htmls/Mimix.html
@@ -37,19 +37,19 @@
     
     <header >
         <div class="container-fluid">
-            <nav class="navbar navbar-inverse">
+            <nav class="navbar navbar-inverse nav">
               <div class="container-fluid">
                 <ul class="nav navbar-nav lista">
                   <li><a class="hoverable boton" href="../index.html">Inicio</a></li>
-                  <li><a class="hoverable boton" href="../htmls/Mimix.html">Mimix</a></li>
+                  <li><a class="hoverable boton active" href="../htmls/Mimix.html">Mimix</a></li>
                   <li><a class="hoverable boton" href="../htmls/contacto.html">Contacto</a></li>
-                  <li><a href="" class=" hoverable menu boton">Menu</a>
+                  <li><a class="hoverable boton" href="../htmls/trabaja.html">Trabaja con Nosotros</a></li>
+                  <li><a href="" class=" hoverable menu boton nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Menu</a>
                     <ul class="sublista">
-                        <li> <a href="../htmls/menucumpleto.html" class=" menu boton">Menu Completo</a></li>
-                        <li> <a href="../htmls/promos.html" class=" menu boton">Promos</a></li>
+                        <li> <a href="../htmls/menucumpleto.html" class=" menu boton dropdown-item">Menu Completo</a></li>
+                        <li> <a href="../htmls/promos.html" class=" menu boton dropdown-item">Promos</a></li>
                     </ul>
                   </li>
-                  <li><a class="hoverable boton" href="../htmls/trabaja.html">Trabaja con Nosotros</a></li>
                 </ul>
               </div>
             </nav>
@@ -86,7 +86,7 @@
                                 <img src="../images/mimiuru.jpg" alt="Emilia y Damian en Colonia">
                             </div>
                             <figcaption>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Emilia y Damian buscando sabores en Colonia.
                                 <span class="credit">Photo: Daniela Salvia</span>
                             </figcaption>
                         </figure>
@@ -97,8 +97,8 @@
                                 <img src="../images/mimicds.jpg" alt="Emilia en el CDS">
                             </div>
                             <figcaption>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                                <span class="credit">Photo: Christian Joudrey</span>                            
+                                Sabemos que los sabores de las hamburguesas de los estadios tienen un toque especial, ese dia fuimos a conocerlos.
+                                <span class="credit">Photo: Damian De los Santos</span>                            
                             </figcaption>
                         </figure>
                     </li>
@@ -108,7 +108,7 @@
                                 <img src="../images/mimidespeinada.jpg" alt="Emilia con Damian despeinada">
                             </div>
                             <figcaption>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Tarde de mucho trabajo y Mimi recien levantada.
                                 <span class="credit">Photo: Steve Carter</span>                            
                             </figcaption>
                         </figure>
@@ -119,7 +119,7 @@
                                 <img src="../images/mimibeach.jpg" alt="Emilia en la playa">
                             </div>
                             <figcaption>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Conociendo lugares y sabores en el dia de playa.
                                 <span class="credit">Photo: Aleksandra Boguslawska</span>                            
                             </figcaption>
                         </figure>
@@ -130,7 +130,7 @@
                                 <img src="../images/mimi1.jpg" alt="Emilia bebe">
                             </div>
                             <figcaption>
-                                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                                Emilia al natural.
                                 <span class="credit">Photo: Rosan Harmens</span>                            
                             </figcaption>
                         </figure>
@@ -161,18 +161,12 @@
 
     <section class="container">
         <h2 class="titulo">Mision</h2>
-        <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisi
-            cing elit. Necessitatibus ratione nemo 
-            maiores voluptatem, deleniti doloremque iusto. Non, ratione voluptas unde aspernatur tempore et soluta, quas quia commodi 
-            laboriosam beatae. Et.</p>
+        <p class="parrafo">“Entregar gran sabor, comida de alta calidad a nuestros clientes y proveer de una experiencia unica que los haga sentir bienvenidos y valorados.”</p>
     </section>
 
     <section class="container">
         <h2 class="titulo">Vision</h2>
-        <p class="parrafo">Lorem ipsum dolor sit amet consectetur adipisi
-            cing elit. Necessitatibus ratione nemo 
-            maiores voluptatem, deleniti doloremque iusto. Non, ratione voluptas unde aspernatur tempore et soluta, quas quia commodi 
-            laboriosam beatae. Et.</p>
+        <p class="parrafo">Llegar a ser la marca de hamburguesas nacionales que llegue a los 19 departamentos de Uruguay.</p>
     </section>
 
 
@@ -184,6 +178,10 @@
             <img src="../images/iconoins.png" width="50" alt="Cuenta de instagram" class="instagram">
         </a>
         </div>
+
+        <section class="container perrafo">
+            <a href="https://www.linkedin.com/in/gustavo-morel/" target="_blank">&copy; Copyright 2021 // Realizado por Gustavo Morel</a>
+        </section>
        
     </footer>
 
