--- a/htmls/promos.html
+++ b/htmls/promos.html
@@ -35,23 +35,23 @@
 
   
   <header >
-      <div class="container-fluid">
-          <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-              <ul class="nav navbar-nav lista">
-                <li><a class="hoverable boton" href="../index.html">Inicio</a></li>
-                <li><a class="hoverable boton" href="../htmls/Mimix.html">Mimix</a></li>
-                <li><a class="hoverable boton" href="../htmls/contacto.html">Contacto</a></li>
-                <li><a href="" class=" hoverable menu boton">Menu</a>
-                  <ul class="sublista">
-                      <li> <a href="../htmls/menucumpleto.html" class=" menu boton">Menu Completo</a></li>
-                      <li> <a href="../htmls/promos.html" class=" menu boton">Promos</a></li>
-                  </ul>
-                </li>
-                <li><a class="hoverable boton" href="../htmls/trabaja.html">Trabaja con Nosotros</a></li>
+    <div class="container-fluid">
+      <nav class="navbar navbar-inverse nav">
+        <div class="container-fluid">
+          <ul class="nav navbar-nav lista">
+            <li><a class="hoverable boton" href="../index.html">Inicio</a></li>
+            <li><a class="hoverable boton" href="../htmls/Mimix.html">Mimix</a></li>
+            <li><a class="hoverable boton" href="../htmls/contacto.html">Contacto</a></li>
+            <li><a class="hoverable boton" href="../htmls/trabaja.html">Trabaja con Nosotros</a></li>
+            <li><a href="" class=" hoverable menu boton nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Menu</a>
+              <ul class="sublista">
+                  <li> <a href="../htmls/menucumpleto.html" class=" menu boton dropdown-item">Menu Completo</a></li>
+                  <li> <a href="../htmls/promos.html" class=" menu boton dropdown-item active">Promos</a></li>
               </ul>
-            </div>
-          </nav>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
   </header>
 
@@ -62,10 +62,9 @@
 
     <section class="container">
         <h1 class="titulo">!!! NUESTRAS PROMOS !!!</h1>
-        <p class="parrafos">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illum error 
-            recusandae nobis vero ducimus a similique odio pariatur laudantium
-             commodi, placeat voluptates maiores totam doloremque
-             quidem repudiandae? Minus, repellat optio!</p>
+        <p class="parrafos">Queremos que comer una hamburguesa sea algo mas que una simple cena, por eso diseñamos formatos especiales
+          para que nuestros clientes y amigos sientan en cada mordida que Mimix tambien son ellos.
+        </p>
     </section>
 
     <section class="prom container">
@@ -109,13 +108,13 @@
             <img src="../images/iconoins.png" width="50" alt="Cuenta de instagram" class="instagram">
         </a>
         </div>
+
+        <section class="container perrafo">
+          <a href="https://www.linkedin.com/in/gustavo-morel/" target="_blank">&copy; Copyright 2021 // Realizado por Gustavo Morel</a>
+      </section>
+     
        
     </footer>
-
-
-
-
-
 
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
