--- a/htmls/trabaja.html
+++ b/htmls/trabaja.html
@@ -41,24 +41,23 @@
 
   
   <header >
-      <div class="container-fluid">
-          <nav class="navbar navbar-inverse">
-            <div class="container-fluid">
-              <ul class="nav navbar-nav lista">
-                <li><a class="hoverable boton" href="../index.html">Inicio</a></li>
-                <li><a class="hoverable boton" href="../htmls/Mimix.html">Mimix</a></li>
-                <li><a class="hoverable boton" href="../htmls/contacto.html">Contacto</a></li>
-                <li><a href="" class=" hoverable menu boton">Menu</a>
-                  <ul class="sublista">
-                      <li> <a href="../htmls/menucumpleto.html" class=" menu boton">Menu Completo</a></li>
-                      <li> <a href="../htmls/promos.html" class=" menu boton">Promos</a></li>
-                  </ul>
-                </li>
-                <li><a class="hoverable boton" href="../htmls/trabaja.html">Trabaja con Nosotros</a></li>
-              </ul>
-            </div>
-          </nav>
-
+    <div class="container-fluid">
+        <nav class="navbar navbar-inverse nav">
+          <div class="container-fluid">
+            <ul class="nav navbar-nav lista">
+              <li><a class="hoverable boton" href="../index.html">Inicio</a></li>
+              <li><a class="hoverable boton" href="../htmls/Mimix.html">Mimix</a></li>
+              <li><a class="hoverable boton" href="../htmls/contacto.html">Contacto</a></li>
+              <li><a class="hoverable boton active" href="../htmls/trabaja.html">Trabaja con Nosotros</a></li>
+              <li><a href="" class=" hoverable menu boton nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Menu</a>
+                <ul class="sublista">
+                    <li> <a href="../htmls/menucumpleto.html" class=" menu boton dropdown-item">Menu Completo</a></li>
+                    <li> <a href="../htmls/promos.html" class=" menu boton dropdown-item">Promos</a></li>
+                </ul>
+              </li>
+            </ul>
+          </div>
+        </nav>
   </header>
 
   <div>
