--- a/htmls/menucumpleto.html
+++ b/htmls/menucumpleto.html
@@ -40,23 +40,22 @@
     
     <header >
         <div class="container-fluid">
-            <nav class="navbar navbar-inverse">
+            <nav class="navbar navbar-inverse nav">
               <div class="container-fluid">
                 <ul class="nav navbar-nav lista">
                   <li><a class="hoverable boton" href="../index.html">Inicio</a></li>
                   <li><a class="hoverable boton" href="../htmls/Mimix.html">Mimix</a></li>
                   <li><a class="hoverable boton" href="../htmls/contacto.html">Contacto</a></li>
-                  <li><a href="" class=" hoverable menu boton">Menu</a>
+                  <li><a class="hoverable boton" href="../htmls/trabaja.html">Trabaja con Nosotros</a></li>
+                  <li><a href="" class=" hoverable menu boton nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Menu</a>
                     <ul class="sublista">
-                        <li> <a href="../htmls/menucumpleto.html" class=" menu boton">Menu Completo</a></li>
-                        <li> <a href="../htmls/promos.html" class=" menu boton">Promos</a></li>
+                        <li> <a href="../htmls/menucumpleto.html" class=" menu boton dropdown-item active">Menu Completo</a></li>
+                        <li> <a href="../htmls/promos.html" class=" menu boton dropdown-item">Promos</a></li>
                     </ul>
                   </li>
-                  <li><a class="hoverable boton" href="../htmls/trabaja.html">Trabaja con Nosotros</a></li>
                 </ul>
               </div>
             </nav>
-
     </header>
 
     <div>
@@ -65,9 +64,16 @@
  <section >
              <!-- Detalles de tono humoristico que alimentan la guerra o noticia de las fotos -->
              <p class="presenta parrafos container">
-            Ya los patricios romanos poseían su versión de lca de la receta de la primera ibus mongolas y turcas, que en el siglo XIV ya picaban en tiras la carne de los ganado de baja calidad para hacerla muy comestible.7​ La receta de la carne picada llega a Alemania a través de los tártaros de origen ruso (steak tartar), que comen la carne cruda y condimentada con especias. Se tiene conocimiento de un plato similar más antiguo del Imperio romano, que consistía en un tipo de hamburguesa elaborado con carne de res picada con piñones, sal y vino pasado, y servida en el interior de un pan. Hay que resaltar que no fue hasta la invención de la máquina de picar carne cuando la carne picada tomó la posibilidad de ser elaborada en grandes cantidades, pudiendo combinar grasa y otros tejidos con carne magra.8​
-            La primera cadena de hamburgueserías del mundo se.
+            Nuestro creador de recetas y cheff deciden meticulosamente cada uno de los ingredientes.
+            Antes de que una de nuestras hamburguesas llegue al menu, incluso mucho antes de que las mismas lleguen a la mesa de la casa de uno de nuestros clientes pasa por mas de 20 personas que le tienen que dar su OK.
             </p>
+            <p class="presenta parrafos container">
+                Quienes son estas personas? Son los clientes mas duros de roer que tenemos en MIMIX , son nuestra propia familia, nuestros propios amigos, los criticos de todas nuestras andanzas, personas de nuestra confianza que hacen de Mimix
+                algo mas que una simple hamburgueseria.
+                </p>
+                <p class="presenta parrafos container">
+                  Por esa razon cada vez que llevamos al menu una de nuestras hamburguesas sabemos que llevamos calidad, aprobacion y sobre todo mucho amor en cada receta.
+                    </p>
 
             <img src="../images/firma.png" alt="Separador con Firma del Cheff" class="firma">            
  </section>
@@ -159,6 +165,10 @@
         <img src="../images/iconoins.png" width="50" alt="Cuenta de instagram" class="instagram">
     </a>
     </div>
+
+    <section class="container perrafo">
+        <a href="https://www.linkedin.com/in/gustavo-morel/" target="_blank">&copy; Copyright 2021 // Realizado por Gustavo Morel</a>
+    </section>
    
 </footer>
 
